<resources>
    <string name="app_name">Ciphershield</string>
    <string name="advanced_encryption_standard">Advanced Encryption Standard</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="key">key</string>
    <string name="your_output_gonna_be_here">Your output gonna be here</string>
    <string name="copy">Copy</string>
    <string name="reset">RESET</string>
    <string name="message_no_message_to_copy">No text to copy</string>
    <string name="message_copied">Message copy successfully</string>
</resources>